--- a/style.css
+++ b/style.css
@@ -612,8 +612,8 @@ body {
 .circular-15 {
       top: 7.3em;
       left: 7.3em;
-      width: 217px;
-      height: 217px;
+      width: 223px;
+      height: 223px;
       z-index: 15;
 }
 
@@ -648,7 +648,7 @@ body {
       z-index: 17;
       /*  background-image: linear-gradient(-20deg, #ba6416 15%, #bc6615 50%, #8a430f 86%);*/
       background: #ba6416;
-      clip-path: polygon(99% 43%, 89% 43%, 89% 41%, 87% 40%, 77% 54%, 77% 46%, 73% 35%, 68% 30%, 63% 26%, 56% 23%, 53% 28%, 47% 28%, 41% 25%, 36% 28%, 27% 43%, 20% 49%, 17% 54%, 18.5% 60%, 31% 67%, 29% 73%, 42% 80%, 47% 75%, 50% 75%, 56% 78%, 59% 77%, 69% 71%, 76% 62%, 79% 72%, 82% 72%, 86% 66%, 97% 66%);
+      clip-path: polygon(99% 43%, 89% 43%, 89% 41%, 87% 40%, 77% 54%, 77% 46%, 73% 35%, 68% 30%, 63% 26%, 56% 23%, 53% 28%, 47% 28%, 41% 25%, 36% 28%, 28% 43%, 27% 43%, 20% 49%, 17% 54%, 17.5% 59%, 31% 67%, 29% 73%, 42% 80%, 47% 75%, 50% 75%, 56% 78%, 59% 77%, 69% 71%, 76% 62%, 79% 72%, 82% 72%, 86% 66%, 97% 66%);
 }
 
 .horizontal-top {
@@ -661,8 +661,8 @@ body {
 
 .horizontal-top-a {
       top: 169px;
-      left: 138px;
-      width: 16px;
+      left: 137px;
+      width: 19px;
       height: 18px;
       transform: skewX(-25deg);
       border-top: 1px solid #f3cd44;
@@ -1493,78 +1493,78 @@ body {
 }
 
 .horizontal-top-1 {
-      top: 193px;
-      left: 131px;
-      width: 21px;
-      height: 15px;
-      transform: skewX(-135deg);
-      border-left: 2.5px solid #f3cd44;
-      border-radius: 3px 0 0 0;
-}
-
-.horizontal-top-2 {
-      top: 199px;
-      left: 123px;
-      width: 37px;
-      height: 15px;
-      transform: skewX(-135deg);
-      border-left: 2.5px solid #f3cd44;
-      border-radius: 3px 0 0 0;
-}
-
-.horizontal-top-3 {
-      top: 205px;
-      left: 115px;
-      width: 38px;
-      height: 15px;
-      transform: skewX(-135deg);
-      border-left: 2.5px solid #f3cd44;
-      border-radius: 3px 0 0 0;
-}
-
-.horizontal-top-4 {
-      top: 211px;
-      left: 108px;
-      width: 44px;
-      height: 15px;
-      transform: skewX(-135deg);
-      border-left: 2.5px solid #f3cd44;
-      border-radius: 3px 0 0 0;
-}
-
-.horizontal-top-5 {
-      top: 217px;
-      left: 102px;
-      width: 49px;
-      height: 15px;
-      transform: skewX(-135deg);
-      border-left: 2.5px solid #f3cd44;
-      border-radius: 3px 0 0 0;
-}
-
-.horizontal-top-6 {
-      top: 222px;
-      left: 95px;
-      width: 56px;
+      top: 192px;
+      left: 129px;
+      width: 23px;
       height: 16px;
       transform: skewX(-135deg);
       border-left: 2.5px solid #f3cd44;
       border-radius: 3px 0 0 0;
 }
 
+.horizontal-top-2 {
+      top: 198px;
+      left: 120.5px;
+      width: 37px;
+      height: 16px;
+      transform: skewX(-135deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 3px 0 0 0;
+}
+
+.horizontal-top-3 {
+      top: 204px;
+      left: 113px;
+      width: 38px;
+      height: 16px;
+      transform: skewX(-137deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 3px 0 0 0;
+}
+
+.horizontal-top-4 {
+      top: 209px;
+      left: 107.4px;
+      width: 44px;
+      height: 17px;
+      transform: skewX(-137deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 3px 0 0 0;
+}
+
+.horizontal-top-5 {
+      top: 215px;
+      left: 101px;
+      width: 52px;
+      height: 17px;
+      transform: skewX(-137deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 3px 0 0 0;
+}
+
+.horizontal-top-6 {
+      top: 221px;
+      left: 95px;
+      width: 56px;
+      height: 17.5px;
+      transform: skewX(-137deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 3px 0 0 0;
+}
+
 .horizontal-top-7 {
       top: 230px;
-      left: 89px;
+      left: 88.5px;
       width: 65px;
       height: 14px;
-      transform: skewX(-135deg);
+      transform: skewX(-136deg);
       border-left: 2.5px solid #f3cd44;
       border-radius: 3px 0 0 0;
 }
 
 .horizontal-top-8 {
       top: 238px;
-      left: 83.4px;
+      left: 82.8px;
       width: 71px;
       height: 12px;
       transform: skewX(-135deg);
@@ -1668,52 +1668,65 @@ body {
       z-index: 18;
 }
 
+
 .horizontal-bottom-1 {
       top: 286px;
       left: 132px;
       width: 26px;
-      height: 7px;
+      height: 9px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-2 {
       top: 280px;
-      left: 121px;
+      left: 120.8px;
       width: 39px;
-      height: 7px;
+      height: 8.5px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-3 {
       top: 274px;
-      left: 113px;
-      width: 42px;
-      height: 8px;
+      left: 111px;
+      width: 44px;
+      height: 9px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-4 {
       top: 268px;
-      left: 105px;
-      width: 50px;
+      left: 103.5px;
+      width: 51px;
       height: 10px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-5 {
       top: 262px;
-      left: 97px;
+      left: 96px;
       width: 60px;
-      height: 10px;
+      height: 11px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-6 {
       top: 256px;
-      left: 88px;
+      left: 89px;
       width: 66px;
-      height: 11px;
+      height: 12px;
       transform: skewX(-45deg);
+      border-left: 2.5px solid #f3cd44;
+      border-radius: 0 0 0 3px;
 }
 
 .horizontal-bottom-7 {
